Book search API and unit test
